# ent

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  devenv.nix  docker-compose.yaml  requirements.txt
.github/workflows/: test.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: admin.rs  edge.rs  mod.rs  object.rs
config/: default.yaml  development.yaml
migrations/: 20240318000000_create_initial_schema.sql  20241121205907_add-point-in-time.sql  20250221101130_add_type_name_to_schemata.sql
proto/: Cargo.toml  GraphService.proto  buf.yaml  build.rs
proto/ent/: ent.proto
proto/src/: ent.proto  lib.rs
scripts/: start.sh  test-ent.sh
server/: Cargo.toml
server/src/: config.rs  lib.rs  main.rs
server/src/auth/: mod.rs
server/src/db/: graph.rs  mod.rs  schema.rs  transaction.rs  xid.rs
server/src/server/: graph_server.rs  mod.rs  schema_server.rs  util.rs
server/tests/: integration_tests.rs  jwt.rs  mod.rs  test_helper.rs
server/tests/common/: mod.rs
server/tests/graph/: access_control_tests.rs  complex_tests.rs  mod.rs  mvcc_tests.rs
server/tests/schema/: basic_tests.rs  mod.rs  validation_tests.rs
server/tests/test_helper/: assertions.rs  fixtures.rs  mod.rs
src/: config.rs  lib.rs  main.rs  server.rs
src/db/: graph.rs  mod.rs  revision.rs  schema.rs  transaction.rs  xid.rs
src/server/: graph_server.rs  mod.rs  schema_server.rs
test/data/: private.pem  public.pem
tests/: integration_tests.rs  jwt.rs
