[package]
name = "ent"
version = "0.1.0"
edition = "2021"

[ lib ]
path = "src/lib.rs"


[[ bin ]]
name = "ent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = "0.3.18"
anyhow = "1.0.86"
prost = "0.12.6"
prost-types = "0.12.6"
tonic = "0.11.0"
tracing = "0.1.40"
config = { version = "0.14", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "time", "uuid"] }
time = { version = "0.3", features = ["serde"] }
serde_json = "1.0.133"
once_cell = "1.19"
uuid = { version = "1.7", features = ["v4"] }

[ dev-dependencies ]
tokio = { version = "1.41.1", features = ["full", "test-util"] }

[build-dependencies]
tonic-build = "0.11.0"
