[workspace]
resolver = "2"
members = [
    "server",
    "cli",
    "proto",
]

[workspace.dependencies]
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.86"
prost = "0.13.3"
prost-types = "0.13.3"
tonic = "0.12.3"
config = { version = "0.14", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "time", "uuid"] }
time = { version = "0.3", features = ["serde"] }
serde_json = "1.0.133"
once_cell = "1.19"
base64 = "0.22.1"
clap = { version = "4.5.2", features = ["derive"] }
uuid = { version = "1.7", features = ["v4"] }
tonic-reflection = "0.12.3"
tonic-health = "0.12.3"
