[package]
name = "ent"
version = "0.1.0"
edition = "2021"

[dependencies]
ent-proto = { path = "../proto" }
ent-server = { path = "../server" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tonic.workspace = true
clap.workspace = true
serde_json.workspace = true
