[package]
name = "ent-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ent-proto = { path = "../proto" }
tokio.workspace = true
jsonwebtoken.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
config.workspace = true
serde.workspace = true
sqlx.workspace = true
time.workspace = true
serde_json.workspace = true
once_cell.workspace = true
base64.workspace = true
uuid.workspace = true
tonic-reflection.workspace = true
tonic-health.workspace = true
jsonschema = { version = "0.29.0", features = ["reqwest", "resolve-http", "resolve-file"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest = "1.4"
